--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li>Cambridge Public School (2004-2016)</li>        
     </ul>
     <h3>Work Experience</h3>
-    <table border="1">
+    <table>
         <thead>
             <th>Dates</th>
             <th>Work</th>
