--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h3><a href="hobbies.html"><strong>Hobbies</strong></a></h3>
     <hr>
     <h3>Skills</h3>
-    <table border="1" >
+    <table>
         <td>
             <table>
                 <tr>
